--- a/advanced_topics.qmd
+++ b/advanced_topics.qmd
@@ -998,7 +998,7 @@ These PUMAs are designed to have approximately 100,000 people in them, and must 
 
 As always, we start with our PUMS dataset.
 We build up a `dplyr` query to clean some data inconsistencies, such as varying capitalization, then group by language and PUMA by state and year, and calculate how many speakers of each language there are in each PUMA.
-We can see that this returns a data frame with one row per PUMA and language, with the number of speakers and the proportion of speakers compared to the overall population.
+We can see that this returns a data frame with one row per PUMA and language, with the number of speakers and the Proportion of non-English speakers compared to the overall population.
 
 ```{r}
 #| label: pums-langauge
@@ -1013,6 +1013,7 @@ puma_by_langauge <- pums_person |>
       TRUE ~ language
     )
   ) |>
+  filter(language != "english") |>
   group_by(location, PUMA, year, language) |>
   summarize(
     n_people = sum(PWGTP)
@@ -1072,7 +1073,7 @@ _Now_ we're ready to plot.
 #| label: pums-langauge-all-US
 #| eval: false
 puma_by_langauge |>
-  filter(language %in% c("english", "spanish", "french", "navajo")) |>
+  filter(language %in% c("german", "spanish", "french", "navajo")) |>
   fill_pumas() |>
   inner_join(
     PUMA,
@@ -1090,7 +1091,7 @@ puma_by_langauge |>
   theme_minimal() +
   theme(legend.position = "bottom") +
   labs(
-    title = "Proportion of speakers by language",
+    title = "Proportion of non-English speakers by language",
     subtitle = "across the US by PUMA"
   )
 ```
@@ -1100,19 +1101,19 @@ puma_by_langauge |>
 #| label: pums-langauge-all-US-plot
 #| echo: false
 plot <- puma_by_langauge |>
-  filter(language %in% c("english", "spanish", "french", "navajo")) |>
+  filter(language %in% c("german", "spanish", "french", "navajo")) |>
   fill_pumas() |>
   inner_join(PUMA, by = c("year" = "YEAR", "location" = "location", "PUMA" = "PUMA")) |>
   correct_projection() |>
   ggplot() +
-  geom_sf(aes(geometry = geometry, fill = prop_speaker), lwd = 0) +
+  geom_sf(aes(geometry = geometry, fill = prop_speaker), lwd = 0, color = NA) +
   coord_sf(crs = "+proj=laea +lon_0=-98 +lat_0=39.5") +
   facet_wrap(vars(language), ncol = 2) +
   scale_fill_distiller(type = "seq", direction = 1, palette = "Greys", name = "proportion of speakers") +
   theme_minimal() +
   theme(legend.position = "bottom") +
   labs(
-    title = "Proportion of speakers by language",
+    title = "Proportion of non-English speakers by language",
     subtitle = "across the US by PUMA"
   )
 ```
@@ -1130,12 +1131,12 @@ plot
 #| label: pums-langauge-all-US-plot-pdf
 #| echo: false
 #| fig-height: 7
-#| fig-cap: "Proportion of speakers by language across the US by PUMA for English, Spanish, French, and Navajo"
+#| fig-cap: "Proportion of non-English speakers by language across the US by PUMA for German, French, Navajo, and Spanish"
 plot
 ```
 :::
 
-We can clearly see some patterns of migration: French is spoken in parts of northern Maine and Louisiana.
+We can clearly see some patterns of migration: French is spoken in parts of northern Maine and Louisiana; German is spoken in the midwest, especially the upper midwest, and intermountain west.
 
 ::: {.callout-tip}
 That plotting code might look intimidating at first, but most of it is to add theming and to get the projection on the globe.
@@ -1175,7 +1176,7 @@ Making small multiples for each language
   theme_minimal() +
   theme(legend.position = "bottom") +
   labs(
-    title = "Proportion of speakers by language",
+    title = "Proportion of non-English speakers by language",
     subtitle = "across the US by PUMA"
   )
 ```
@@ -1194,7 +1195,7 @@ We've selected slightly different languages for each area to highlight unique di
 #| label: pums-langauge-chicagoland
 #| eval: false
 puma_by_langauge |>
-  filter(language %in% c("english", "spanish", "polish")) |>
+  filter(language %in% c("chinese", "spanish", "polish")) |>
   fill_pumas() |>
   inner_join(PUMA, by = c("year" = "YEAR",
                           "location" = "location",
@@ -1216,7 +1217,7 @@ puma_by_langauge |>
   theme_minimal() +
   theme(legend.position = "bottom") +
   labs(
-    title = "Proportion of speakers by language",
+    title = "Proportion of non-English speakers by language",
     subtitle = "in the Chicago area by PUMA"
   )
 ```
@@ -1226,12 +1227,12 @@ puma_by_langauge |>
 #| label: pums-langauge-chicagoland-plot
 #| echo: false
 plot <- puma_by_langauge |>
-  filter(language %in% c("english", "spanish", "polish")) |>
+  filter(language %in% c("chinese", "spanish", "polish")) |>
   fill_pumas() |>
   inner_join(PUMA, by = c("year" = "YEAR", "location" = "location", "PUMA" = "PUMA")) |>
   correct_projection() |>
   ggplot() +
-  geom_sf(aes(geometry = geometry, fill = prop_speaker), lwd = 0) +
+  geom_sf(aes(geometry = geometry, fill = prop_speaker), lwd = 0, color = NA) +
   coord_sf(
     xlim = c(000000, 100000),
     ylim = c(000000, 150000),
@@ -1243,7 +1244,7 @@ plot <- puma_by_langauge |>
   theme_minimal() +
   theme(legend.position = "bottom") +
   labs(
-    title = "Proportion of speakers by language",
+    title = "Proportion of non-English speakers by language",
     subtitle = "in the Chicago area by PUMA"
   )
 ```
@@ -1262,7 +1263,7 @@ plot
 #| label: pums-langauge-chicagoland-plot-pdf
 #| echo: false
 #| fig-height: 5
-#| fig-cap: "Proportion of speakers by language in the Chicago by PUMA for English, Polish, and Spanish"
+#| fig-cap: "Proportion of non-English speakers by language in the Chicago by PUMA for Chinese, Polish, and Spanish"
 plot +
   scale_x_continuous(
     breaks = seq(-86, -89, by = -0.5)
@@ -1277,7 +1278,7 @@ Or the Northeast, where there are a relatively large proportion of Portugese spe
 #| label: pums-langauge-northeast
 #| eval: false
 puma_by_langauge |>
-  filter(language %in% c("english", "spanish", "french",
+  filter(language %in% c("chinese", "spanish", "french",
                          "portuguese")) |>
   fill_pumas() |>
   inner_join(PUMA, by = c("year" = "YEAR",
@@ -1300,7 +1301,7 @@ puma_by_langauge |>
   theme_minimal() +
   theme(legend.position = "bottom") +
   labs(
-    title = "Proportion of speakers by language",
+    title = "Proportion of non-English speakers by language",
     subtitle = "in the Northeast"
   )
 ```
@@ -1310,12 +1311,12 @@ puma_by_langauge |>
 #| label: pums-langauge-northeast-plot
 #| echo: false
 plot <- puma_by_langauge |>
-  filter(language %in% c("english", "spanish", "french", "portuguese")) |>
+  filter(language %in% c("chinese", "spanish", "french", "portuguese")) |>
   fill_pumas() |>
   inner_join(PUMA, by = c("year" = "YEAR", "location" = "location", "PUMA" = "PUMA")) |>
   correct_projection() |>
   ggplot() +
-  geom_sf(aes(geometry = geometry, fill = prop_speaker), lwd = 0) +
+  geom_sf(aes(geometry = geometry, fill = prop_speaker), lwd = 0, color = NA) +
   coord_sf(
     xlim = c(000000, 650000),
     ylim = c(000000, 810000),
@@ -1326,7 +1327,7 @@ plot <- puma_by_langauge |>
   theme_minimal() +
   theme(legend.position = "bottom") +
   labs(
-    title = "Proportion of speakers by language",
+    title = "Proportion of non-English speakers by language",
     subtitle = "in the Northeast by PUMA"
   )
 ```
@@ -1344,7 +1345,7 @@ plot + facet_wrap(vars(language), ncol = 4)
 #| label: pums-langauge-northeast-plot-pdf
 #| echo: false
 #| fig-height: 9
-#| fig-cap: "Proportion of speakers by language in the Northeast by PUMA for English, French, Portuguese, and Spanish"
+#| fig-cap: "Proportion of non-English speakers by language in the Northeast by PUMA for Chinese, French, Portuguese, and Spanish"
 plot + facet_wrap(vars(language), ncol = 2)
 ```
 :::
